--- a/PML_backup/nbproject/project.properties
+++ b/PML_backup/nbproject/project.properties
@@ -64,7 +64,7 @@ main.class=pml_backup.PML_backup
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
-platform.active=JDK_1.8
+platform.active=default_platform
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
